--- a/editor/sass/header.scss
+++ b/editor/sass/header.scss
@@ -14,38 +14,24 @@
  * limitations under the License.
  **/
 
-$activeButton: #121212;
-
-$deployButton: #8C101C;
-$deployButtonHover: #6E0A1E;
-$deployButtonActive: #4C0A17;
-
-$deployDisabledButton: #444;
-$deployDisabledButtonHover: #555;
-$deployDisabledButtonActive: #444;
-
-$headerMenuBackground: #121212;
-$headerMenuItemHover: #323232;
-$headerMenuItemDivider: #464646;
-
 #header {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 40px;
-    background: #000;
+    height: $header-height;
+    background: $header-background;
     box-sizing: border-box;
     padding: 0px 0px 0px 20px;
-    color: #C7C7C7;
+    color: $header-text-color;
     font-size: 14px;
 }
 
 span.logo {
     float: left;
     margin-top: 5px;
-    font-size: 30px;
-    line-height: 30px;
+    font-size: $header-height * 0.666;
+    line-height: $header-height * 0.666;
     text-decoration: none;
 
     span {
@@ -62,7 +48,20 @@ span.logo {
             text-decoration: none;
         }
     }
+}
 
+span.logo.vendor {
+    img {
+        height: 100%;
+    }
+}
+
+span.logo.with-vendor {
+    float: right;
+
+    span {
+        font-size: 10px !important;
+    }
 }
 
 .header-toolbar {
@@ -87,16 +86,16 @@ span.logo {
 #header .button {
     min-width: 20px;
     text-align: center;
-    line-height: 40px;
+    line-height: $header-height;
     display: inline-block;
     font-size: 20px;
     padding: 0px 12px;
     text-decoration: none;
-    color: #C7C7C7;
+    color: $header-text-color;
     margin: auto 5px;
     vertical-align: middle;
-    border-left: 2px solid #000;
-    border-right: 2px solid #000;
+    border-left: 2px solid $header-background;
+    border-right: 2px solid $header-background;
 
     &:hover {
         border-color: $headerMenuItemHover;
@@ -192,7 +191,7 @@ span.logo {
 }
 
 #header ul.dropdown-menu li a {
-    color: #C7C7C7;
+    color: $header-menu-text-color;
     padding: 3px 40px;
 }
 
@@ -234,7 +233,7 @@ span.logo {
     border-bottom-color: $headerMenuItemHover;
 }
 #header ul.dropdown-menu li.disabled a {
-    color: #666;
+    color: darken($header-menu-text-color, 50%);
 }
 
 #header ul.dropdown-menu > li.disabled:hover > a,
