--- a/editor/sass/notifications.scss
+++ b/editor/sass/notifications.scss
@@ -28,9 +28,9 @@
     padding: 14px 18px;
     margin-bottom: 4px;
     box-shadow: 0 1px 1px 1px rgba(0,0,0, 0.15);
-    background-color: #fff;
-    color: #666;
-    border: 1px solid #325C80;
+    background-color: $notification-back;
+    color: $notification-fore;
+    border: 1px solid $notification-border-color;
     border-left-width: 16px;
 }
 .notification a {
