--- a/editor/sass/tab-config.scss
+++ b/editor/sass/tab-config.scss
@@ -15,7 +15,7 @@
  **/
 
 .sidebar-node-config {
-    background: #f3f3f3;
+    background: $sidebar-node-config-back;
     height: 100%;
     overflow-y:auto;
     @include disable-selection;
@@ -29,7 +29,7 @@
      width: 160px;
      height: 30px;
      background: #f3f3f3;
-     color: #666;
+     color: $config-node-color;
      cursor: pointer;
 
      .palette_label {
@@ -43,13 +43,13 @@
      .palette_icon_container {
          font-size: 12px;
          line-height: 30px;
-         background-color: #e8e8e8;
+         background-color: $config-node-icon-container-back;
          border-top-right-radius: 4px;
          border-bottom-right-radius: 4px;
      }
 }
 .config_node_type {
-    color: #999;
+    color: $config-node-type-color;
     text-align: right;
     padding-right: 3px;
     &:not(:first-child) {
@@ -57,15 +57,15 @@
     }
 }
 .config_node_none {
-    color: #ddd;
+    color: $config-node-node-color;
     text-align:right;
     padding-right: 3px;
 }
 .config_node_unused {
-    border-color: #aaa;
-    background: #f9f9f9;
+    border-color: $config-node-unused-border;
+    background: $config-node-unused-back;
     border-style: dashed;
-    color: #aaa;
+    color: $config-node-unused-color;
 }
 .config-node-filter-info {
     position: absolute;
@@ -76,6 +76,6 @@
     padding: 0 8px;
     background: $palette-header-background;
     font-size: 0.8em;
-    color: #999;
+    color: $config-node-filter-color;
     font-weight: normal;
 }
