--- a/editor/sass/tab-info.scss
+++ b/editor/sass/tab-info.scss
@@ -35,7 +35,7 @@ table.node-info tr.blank td {
     padding-left: 0px;
 }
 table.node-info td:first-child{
-    color: #000;
+    color: $tab-info-field-title-color;
     vertical-align: top;
     width: 90px;
     padding: 3px;
@@ -43,17 +43,17 @@ table.node-info td:first-child{
 }
 table.node-info td:last-child{
     padding-left: 5px;
-    color: #666;
+    color: $tab-info-field-desc-color;
 }
 div.node-info {
     margin: 5px;
 }
 .node-info-property-header {
-    color: #666;
+    color: $tab-info-property-header-color;
 }
 .node-info-property-header:hover,
 .node-info-property-header:focus {
-    color: #666;
+    color: $tab-info-property-header-color;
     text-decoration: none;
 }
 .node-help {
