--- a/editor/sass/palette.scss
+++ b/editor/sass/palette.scss
@@ -48,7 +48,7 @@
     left:0;
     right:0;
     overflow: hidden;
-    background: $palette-back;
+    background: $palette-search-back;
     text-align: center;
     height: 35px;
     padding: 3px;
@@ -70,7 +70,7 @@
         }
     }
     input {
-        background: $palette-back;
+        background: $palette-search-input-back;
         color: $palette-fore;
         border-radius: 0;
         border: none;
@@ -111,7 +111,7 @@
     border-bottom: 1px solid $primary-border-color;
 }
 .palette-content {
-    background: $palette-back;
+    background: $palette-content-back;
     padding: 3px;
 }
 
