Login page vendorized too.

--- a/editor/sass/header.scss
+++ b/editor/sass/header.scss
@@ -58,7 +58,7 @@ span.logo.vendor {
 
 span.logo.with-vendor {
     float: right;
-
+    margin-right: 15px;
     span {
         font-size: 10px !important;
     }
